--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -29,3 +29,34 @@ $breakpoint-xl: 1200px;
   flex-direction: $direction;
   gap: $gap;
 }
+
+@mixin button-style {
+  cursor: pointer;
+  background: $color-primary;
+  color: white;
+  border: none;
+
+  width: 273px;
+  height: 66px;
+  border-radius: 100px;
+  transition: background 0.3s ease;
+  font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+
+  &:hover {
+    background: $color-accent;
+    color: white;
+  }
+
+  @include mobile {
+    width: 288px;
+    height: 48px;
+    padding: 8px 16px;
+    font-size: 16px;
+  }
+}
