--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,92 @@
 @import "./variables";
 @import "./mixins";
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 html {
   scroll-behavior: smooth;
+  padding: 0;
+  margin: 0;
+  scroll-padding-top: 30px;
+}
+
+body {
+  font-family: $font-main;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 16px;
+  text-align: center;
+  color: $color-primary;
+  font-size: 18px;
+
+  @include mobile {
+    font-size: 12px;
+  }
+}
+ul {
+  margin: 0;
+}
+
+h1 {
+  font-size: 90px;
+
+  font-weight: 600;
+
+  @include mobile {
+    font-size: 40px;
+  }
+}
+h2 {
+  font-size: 60px;
+  font-weight: 500;
+
+  @include mobile {
+    font-size: 28px;
+  }
+}
+h3 {
+  font-size: 32px;
+  font-weight: 500;
+
+  @include mobile {
+    font-size: 18px;
+    font-weight: 400;
+  }
+}
+
+button {
+  cursor: pointer;
+  background: $color-primary;
+  color: white;
+  border: none;
+  padding: 16px 32px;
+  width: 273px;
+  height: 66px;
+  border-radius: 100px;
+  transition: background 0.3s ease;
+  font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  :hover {
+    background: $color-accent;
+    color: white;
+  }
+
+  @include mobile {
+    width: 288px;
+    height: 48px;
+    padding: 8px 16px;
+    font-size: 16px;
+  }
+}
+
+a {
+  text-decoration: none;
+  color: $color-primary;
+  transition: color 0.3s ease;
+
+  &:hover {
+    color: $color-accent;
+  }
+}
+
+li {
+  list-style: none;
 }
