--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -35,8 +35,8 @@ $breakpoint-xl: 1200px;
   background: $color-primary;
   color: white;
   border: none;
-
-  width: 273px;
+  max-width: 300px;
+  width: 100%;
   height: 66px;
   border-radius: 100px;
   transition: background 0.3s ease;
@@ -54,9 +54,9 @@ $breakpoint-xl: 1200px;
   }
 
   @include mobile {
-    width: 288px;
+    // width: 288px;
     height: 48px;
-    padding: 8px 16px;
+    // padding: 8px 16px;
     font-size: 16px;
   }
 }
