--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,9 +5,9 @@ html {
   scroll-behavior: smooth;
   padding: 0;
   margin: 0;
+
   scroll-padding-top: 30px;
 }
-
 body {
   font-family: $font-main;
   // max-width: 1164px;
@@ -38,6 +38,7 @@ section {
 }
 ul {
   margin: 0;
+  padding: 0;
 }
 
 h1 {
@@ -50,6 +51,7 @@ h1 {
     font-size: 40px;
   }
 }
+
 h2 {
   font-size: 60px;
   font-weight: 500;
@@ -60,6 +62,7 @@ h2 {
     font-size: 28px;
   }
 }
+
 h3 {
   font-size: 32px;
   font-weight: 500;
