--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -68,18 +68,25 @@ h3 {
   font-weight: 500;
   margin: 0;
   text-align: left;
+  line-height: 125%;
+  letter-spacing: 0.01rem;
 
   @include mobile {
     font-size: 18px;
     font-weight: 400;
+    line-height: 140%;
+    letter-spacing: -0.02rem;
   }
 }
 
 p {
   margin: 0;
-  letter-spacing: -0.02rem;
-  line-height: 140%;
   text-align: left;
+
+  @include mobile {
+    line-height: 140%;
+    letter-spacing: -0.02rem;
+  }
 }
 
 button {
