--- a/src/components/Premium/premium.scss
+++ b/src/components/Premium/premium.scss
@@ -1,51 +1,113 @@
 @import "../../styles/variables";
 @import "../../styles/mixins";
 
-.premium__content--mobile {
-  @include desktop {
-    display: none;
+.premium {
+  background-color: $color-primary;
+
+  &__title {
+    color: $color-bg;
+    margin-bottom: 64px;
+    @include mobile {
+      margin-bottom: 32px;
+    }
   }
-}
-
-.premium__content--desktop {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(4, auto);
-  gap: 2rem;
-  max-width: 1200px;
-  margin: 0 auto;
-
-  @include mobile {
-    display: none;
+  &__content--mobile {
+    @include desktop {
+      display: none;
+    }
   }
-}
 
-.premium__item--text1 {
-  grid-column: 1;
-  grid-row: 1 / 3;
-}
+  &__content {
+    &--mobile {
+      @include flex(center, center, column, 16px);
+      @include desktop {
+        display: none;
+      }
+    }
+    &--desktop {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(4, auto);
+      gap: 2rem;
+      max-width: 1200px;
+      margin: 0 auto;
+      align-items: stretch;
 
-.premium__item--img1 {
-  grid-column: 2;
-  grid-row: 1;
-}
+      @include mobile {
+        display: none;
+      }
+    }
+  }
 
-.premium__item--img2 {
-  grid-column: 2;
-  grid-row: 2;
-}
+  &__perk {
+    padding: 32px;
+    background-color: $color-bg;
+    border-radius: 24px;
+    line-height: 150%;
 
-.premium__item--img3 {
-  grid-column: 1;
-  grid-row: 3 / 5;
-}
+    @include flex(space-evenly, flex-start, column, 32px);
 
-.premium__item--text2 {
-  grid-column: 2;
-  grid-row: 3;
-}
+    @include mobile {
+      @include flex(center, center, column, 16px);
+      padding: 32px 16px;
+      line-height: 140%;
+    }
+  }
 
-.premium__item--text3 {
-  grid-column: 2;
-  grid-row: 4;
+  &__perk-image-wrapper {
+    @include mobile {
+      width: 100%;
+      @include flex(flex-start, flex-start, row, 16px);
+    }
+  }
+  &__perk-image {
+    @include mobile {
+      width: 116px;
+      height: 116px;
+    }
+  }
+
+  &__image {
+    max-height: 244px;
+    &--large {
+      min-height: 566px;
+      rotate: y -180deg;
+    }
+
+    &--shifted {
+      object-position: center 90%;
+    }
+  }
+
+  &__item {
+    &--text1 {
+      grid-column: 1;
+      grid-row: 1 / 3;
+    }
+
+    &--img1 {
+      grid-column: 2;
+      grid-row: 1;
+    }
+
+    &--img2 {
+      grid-column: 2;
+      grid-row: 2;
+    }
+
+    &--img3 {
+      grid-column: 1;
+      grid-row: 3 / 5;
+    }
+
+    &--text2 {
+      grid-column: 2;
+      grid-row: 3;
+    }
+
+    &--text3 {
+      grid-column: 2;
+      grid-row: 4;
+    }
+  }
 }
