--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -57,9 +57,13 @@ h2 {
   font-weight: 500;
   text-align: left;
   margin: 0;
+  line-height: 125%;
+  letter-spacing: 0.01rem;
 
   @include mobile {
     font-size: 28px;
+    line-height: 140%;
+    letter-spacing: -0.02rem;
   }
 }
 
@@ -74,7 +78,7 @@ h3 {
   @include mobile {
     font-size: 18px;
     font-weight: 400;
-    line-height: 140%;
+
     letter-spacing: -0.02rem;
   }
 }
