--- a/src/components/FAQ/FAQ.scss
+++ b/src/components/FAQ/FAQ.scss
@@ -54,8 +54,9 @@
     padding: 16px 32px;
     cursor: pointer;
 
-    @include flex(space-between, flex-start, row);
+    @include flex(space-between, center, row);
     @include mobile {
+      align-items: flex-start;
       padding: 16px;
       font-size: 18px;
     }
