add form styling and some validation

--- a/src/components/Advantages/advantages.scss
+++ b/src/components/Advantages/advantages.scss
@@ -102,9 +102,8 @@
   // Dot pagination
   // ----------------------------------
   &__dots {
-    @include flex(center, center);
-    margin-top: 1rem;
-    gap: 0.5rem;
+    @include flex(center, center, row, 8px);
+    margin-top: 24px;
 
     @include desktop {
       display: none;
@@ -112,10 +111,10 @@
   }
 
   &__dot {
-    width: 8px;
-    height: 8px;
+    width: 16px;
+    height: 16px;
     border-radius: 50%;
-    background: #ccc;
+    background: $color-border-extra-dark;
     transition: background 0.3s ease;
     cursor: pointer;
 
