--- a/src/components/Program/program.scss
+++ b/src/components/Program/program.scss
@@ -106,8 +106,9 @@
     width: 16px;
     height: 16px;
     border-radius: 50%;
-    background: #ccc;
+    background: $color-border-extra-dark;
     transition: background 0.3s ease;
+    cursor: pointer;
 
     &.active {
       background: $color-primary;
