--- a/src/components/Advantages/advantages.scss
+++ b/src/components/Advantages/advantages.scss
@@ -81,6 +81,8 @@
   &__list--mobile {
     display: flex;
     overflow-x: auto;
+    overflow-y: hidden;
+
     scroll-snap-type: x mandatory;
     gap: 1rem;
 
