--- a/src/components/Program/program.scss
+++ b/src/components/Program/program.scss
@@ -37,6 +37,7 @@
   &__content {
     display: flex;
     overflow-x: auto;
+    overflow-y: hidden;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     gap: 24px;
