--- a/src/components/PersonalPath/PersonalPath.scss
+++ b/src/components/PersonalPath/PersonalPath.scss
@@ -31,6 +31,7 @@
       display: flex;
       flex-direction: column;
       gap: 16px;
+      padding: 0 1px;
     }
   }
 
@@ -150,6 +151,7 @@
       @include flex(center, flex-start, column, 16px);
       padding: 32px 16px;
       max-width: 350px;
+      width: 90%;
     }
 
     // @include desktop {
